--- a/WindowsLab/WindowsLab.csproj
+++ b/WindowsLab/WindowsLab.csproj
@@ -83,6 +83,12 @@
     <Compile Include="Form6.Designer.cs">
       <DependentUpon>Form6.cs</DependentUpon>
     </Compile>
+    <Compile Include="frm1Vectores.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frm1Vectores.Designer.cs">
+      <DependentUpon>frm1Vectores.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Form1.resx">
@@ -102,6 +108,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Form6.resx">
       <DependentUpon>Form6.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frm1Vectores.resx">
+      <DependentUpon>frm1Vectores.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
