--- a/WindowsLab/WindowsLab.csproj
+++ b/WindowsLab/WindowsLab.csproj
@@ -89,6 +89,12 @@
     <Compile Include="frm1Vectores.Designer.cs">
       <DependentUpon>frm1Vectores.cs</DependentUpon>
     </Compile>
+    <Compile Include="frm2Vectores.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frm2Vectores.Designer.cs">
+      <DependentUpon>frm2Vectores.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Form1.resx">
@@ -111,6 +117,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="frm1Vectores.resx">
       <DependentUpon>frm1Vectores.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frm2Vectores.resx">
+      <DependentUpon>frm2Vectores.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
